--- a/applications/cupid/sun_master.tex
+++ b/applications/cupid/sun_master.tex
@@ -1,603 +1,50 @@
-\documentclass[twoside,11pt]{article}
-
-% ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-\usepackage[english]{babel}
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
-% ? End of specify used packages
-
-\pagestyle{myheadings}
+\documentclass[twoside,11pt]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {255.2}
-\newcommand{\stardocauthors}   {D.S. Berry}
-\newcommand{\stardocdate}      {20th November 2013}
-\newcommand{\stardoctitle}     {CUPID}
-\newcommand{\stardoconeline}   {A 3D Clump Identification and Analysis Package}
-\newcommand{\stardocversion}   {Version 2.0}
-\newcommand{\stardocmanual}    {Users' Manual}
-\newcommand{\stardocabstract}  {CUPID is a package of the identification
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {255.2}
+\stardocauthors     {D.S. Berry}
+\stardocdate        {20th November 2013}
+\stardoctitle       {CUPID -- A 3D Clump Identification and Analysis Package}
+\stardocversion     {Version 2.0}
+\stardocmanual      {Users' Manual}
+\stardocabstract  {CUPID is a package of the identification
 and analysis of clumps of emission within 1-, 2- and 3- dimensional
 data arrays.}
 
 % ? End of document identification
 % -----------------------------------------------------------------------------
+\stardocname  {\stardocinitials /\stardocnumber}
 
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-
-% Includes a gif version of a figure, centred within a table, with a caption.
-\newcommand{\htmlfig}[3]{
-   \label{#1}
-   \begin{rawhtml} <CENTER><TABLE NOSAVE > \end{rawhtml}
-   \begin{rawhtml} <TR ALIGN=CENTER VALIGN=CENTER NOSAVE> \end{rawhtml}
-   \begin{rawhtml} <TD NOSAVE><DT><IMG SRC=" \end{rawhtml}
-   #2
-   \begin{rawhtml} " NOSAVE ></DT></TD></TR> \end{rawhtml}
-   \begin{rawhtml} <CAPTION ALIGN=BOTTOM><FONT SIZE=+1><BR><BR><B> \end{rawhtml}
-   #3
-   \begin{rawhtml} </B><BR><BR><BR><BR></FONT></CAPTION></TABLE></CENTER> \end{rawhtml}
-}
-
-% centre an asterisk
-\newcommand{\lsk}{\raisebox{-0.4ex}{\rm *}}
-\begin{htmlonly}
-\newcommand{\lsk}{*}
-\end{htmlonly}
 
 % Environment for indenting and using a small font.
 \newenvironment{myquote}{\begin{quote}\begin{small}}{\end{small}\end{quote}}
 
-% In-line typed text, buttons and menu items.
-\newcommand{\butt}[1]{{\small \bf \tt #1}}
-\newcommand{\menu}[1]{{\small \bf \em #1}}
-\newcommand{\wlab}[1]{{\small \bf #1}}
-\newcommand{\text}[1]{{\small \tt #1}}
-
 % Quick routine descriptions
-\newcommand{\quickdes}[3]{
+\providecommand{\quickdes}[3]{
                          \parbox{1.8in}{\bf #1}
                          \parbox{3.7in}{\raggedright #2 \dotfill}
                          \parbox{0.6in}{\pageref{#3}}
                          \vspace*{0.2in}}
 
-% Quotes for SST.
-\newcommand{\qt}[1]{{\tt "}#1{\tt "}}
-\newcommand{\qs}[1]{{\tt '}#1{\tt '}}
-\begin{htmlonly}
-   \newcommand{\qt}[1]{ {\tt{"}}#1{\tt{"}} }
-   \newcommand{\qs}[1]{ {\tt{'}}#1{\tt{'}} }
-\end{htmlonly}
-
-% Routines with descriptions in the appendix.
-\newcommand{\routine}[1]{{\sc #1}}
-\newcommand{\xroutine}[1]{\htmlref{{\sc #1}}{#1}}
-
-% Latex only sections, subsections etc. Surround these with a latexonly
-% environment.
-\newcommand{\latexonlysection}[1]{\section{#1}}
-\newcommand{\latexonlysubsection}[1]{\subsection{#1}}
-\newcommand{\latexonlysubsubsection}[1]{\subsubsection{#1}}
-\begin{htmlonly}
-   \newcommand{\latexonlysection}[1]{#1}
-   \newcommand{\latexonlysubsection}[1]{#1}
-   \newcommand{\latexonlysubsubsection}[1]{#1}
-\end{htmlonly}
-
-% degrees symbol
-\newcommand{\dgs}{\hbox{$^\circ$}}
-\begin{htmlonly}
-\newcommand{\dgs}{ degrees}
-\end{htmlonly}
-
-\newcommand{\dash}{--}
-\begin{htmlonly}
-\newcommand{\dash}{-}
-\end{htmlonly}
-\newcommand{\STARURL}{http://www.starlink.ac.uk}
-\newcommand{\TCLURL}{http://www.scriptics.com/}
-\newcommand{\IRAFURL}{http://www.starlink.ac.uk/iraf/web/iraf-homepage.html}
-\newcommand{\STORE}{http://www.starlink.ac.uk/cgi-bin/storetop}
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     21-JUL-2009 (TIMJ):
-%        Added \sstdiylist{}{} as used when a Parameters section is located that
-%        is not "ADAM Parameters".
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \newpage
-   \goodbreak
-   \label{#1}
-   \markboth{{\stardocname}~ --- #1}{{\stardocname}~ --- #1}
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the a generic section as a list
-\newcommand{\sstdiylist}[2]{
-   \item[#1:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #2
-   \end{description}
-}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
-
-
-
+\providecommand{\STARURL}{http://www.starlink.ac.uk}
+\providecommand{\TCLURL}{http://www.scriptics.com/}
+\providecommand{\IRAFURL}{http://www.starlink.ac.uk/iraf/web/iraf-homepage.html}
+\providecommand{\STORE}{http://www.starlink.ac.uk/cgi-bin/storetop}
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
 
-% ? Add picture here if required for the LaTeX version.
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{5mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
 %  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1 ALIGN=CENTER> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
 
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
 
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
 
 % -----------------------------------------------------------------------------
 % ? Document Abstract. (if used)
@@ -605,21 +52,9 @@ data arrays.}
 \stardocabstract
 
 % ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
+
 \cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+
 
 \section{\xlabel{introduction}Introduction}
 
@@ -641,7 +76,7 @@ format used by most Starlink software, and is described fully in
 \xref{SUN/33}{sun33}{}. However, other astronomical data formats may also
 be processed using transparent on-the-fly data conversion facilities
 provided by the NDF subroutine library, and the CONVERT package. The use of
-these facilities is described \hyperref{here}{in section }{}{SEC:CONVERT},
+these facilities is described \slhyperref{here}{in section }{}{SEC:CONVERT},
 and more fully in \xref{SUN/55}{sun55}{}.
 
 All CUPID applications use standard Starlink subroutine libraries for
@@ -722,9 +157,9 @@ pixel position.
 
 Any input variance component is used to scale the weight associated with
 each pixel value when performing the Gaussian fit. The most significant
-configuration parameters for this algorithm are: {\tt
-GaussClumps.FwhmBeam} and {\tt GaussClumps.VeloRes} which determine the
-minimum clump size, and {\tt GaussClumps.Thresh} which (together with the
+configuration parameters for this algorithm are:
+\texttt{GaussClumps.FwhmBeam} and \texttt{GaussClumps.VeloRes} which determine the
+minimum clump size, and \texttt{GaussClumps.Thresh} which (together with the
 ADAM parameter RMS) determine the third of the termination
 criteria listed below.
 
@@ -737,12 +172,12 @@ modifications.
 
 \item The Gaussian fitting is based on the SUMSL module (algorithm 611)
 from the TOMS library available from
-\htmladdnormallink{http://www.netlib.org/}{{\tt http://www.netlib.org/}}.
+\url{http://www.netlib.org/}.
 
 \item Any available variance information is used to weight the pixels
 when doing the Gaussian fit. This is in addition to the Gaussian
 weighting function implied by configuration parameters
-{\tt GaussClumps.Wwidth} and {\tt GaussClumps.Wmin}.
+\texttt{GaussClumps.Wwidth} and \texttt{GaussClumps.Wmin}.
 
 \item The termination criteria are different. FINDCLUMPS stops finding
 further clumps if any one of the following criteria is met.
@@ -754,23 +189,23 @@ the total data sum in the supplied input data (this is the original
 termination criterion used by \emph{Stutzki \& Gusten}).
 
 \item The number of clumps already found equals the value of
-configuration parameter {\tt GaussClumps.MaxClumps}.
+configuration parameter \texttt{GaussClumps.MaxClumps}.
 
 \item The number of consecutive fitted peaks with peak value below the
-value of configuration parameter {\tt GaussClumps.Thresh} reaches the value of
-configuration parameter {\tt GaussClumps.NPad} (the final group of NPad clumps
+value of configuration parameter \texttt{GaussClumps.Thresh} reaches the value of
+configuration parameter \texttt{GaussClumps.NPad} (the final group of NPad clumps
 are not included in the returned list of usable clumps).
 
 \item The number of failed attempts to fit consecutive clumps reaches
-the value of configuration parameter {\tt GaussClumps.MaxSkip}.
+the value of configuration parameter \texttt{GaussClumps.MaxSkip}.
 
 \end{enumerate}
 
 \item A clump will be ignored if its fitted peak value is a long way above or
 below the peak value of the previously fitted clump. The definition of
-``a long way'' is more than {\tt GaussClumps.NSigma} times the standard
-deviation of the previous {\tt GaussClumps.NPeak} fitted peaks. This
-restriction is only imposed once {\tt GaussClumps.NPeak} peaks have been
+``a long way'' is more than \texttt{GaussClumps.NSigma} times the standard
+deviation of the previous \texttt{GaussClumps.NPeak} fitted peaks. This
+restriction is only imposed once \texttt{GaussClumps.NPeak} peaks have been
 fitted.
 
 \item In certain situations the chi-squared value that is minimised when
@@ -817,8 +252,8 @@ The CUPID implementation of ClumpFind is a completely independent
 and total re-write, based on the description of the algorithm in the 1994
 Williams, de Geus \& Blitz paper. Consequently, it differs slightly from
 other implementations such as the IDL implementation available from
-Williams own web page at \htmladdnormallink{http://www.ifa.hawaii.edu/~jpw/}
-{{\tt http://www.ifa.hawaii.edu/~jpw/}}). In particularly, several extra
+Williams own web page at \url{http://www.ifa.hawaii.edu/~jpw/}).
+In particularly, several extra
 configuration parameters have been added by CUPID to provide more
 detailed control of the algorithm. If you want to do a direct comparison
 between the CUPID implementation of the ClumpFind algorithm and another
@@ -826,12 +261,12 @@ implementation, then you should set these extra parameters to the
 following values:
 
 \begin{itemize}
-\item {\tt ClumpFind.FwhmBeam} = 0
-\item {\tt ClumpFind.MaxBad} = 1.0
-\item {\tt ClumpFind.MinPix} = 6 (for 3D data - use 20 for 2D data)
-\item {\tt ClumpFind.VeloRes} = 0
-\item {\tt ClumpFind.IDLAlg} = 1
-\item {\tt ClumpFind.AllowEdge} = 1
+\item \texttt{ClumpFind.FwhmBeam} = 0
+\item \texttt{ClumpFind.MaxBad} = 1.0
+\item \texttt{ClumpFind.MinPix} = 6 (for 3D data - use 20 for 2D data)
+\item \texttt{ClumpFind.VeloRes} = 0
+\item \texttt{ClumpFind.IDLAlg} = 1
+\item \texttt{ClumpFind.AllowEdge} = 1
 \end{itemize}
 
 You should also note that the pixel co-ordinate system used by the two
@@ -867,7 +302,7 @@ clump is sometimes varied in value
 CUPID provides an option to use either the published algorithm, or the
 algorithm implemented by the IDL package available from Jonathan Williams
 WWW site (as available at 28th April 2006). Setting the configuration
-parameter {\tt ClumpFind.IDLAlg} to a non-zero value will cause the IDL
+parameter \texttt{ClumpFind.IDLAlg} to a non-zero value will cause the IDL
 implementation to be used. The default value of zero causes the published
 algorithm to be used.
 
@@ -894,7 +329,7 @@ profile. For each such profile, the algorithm proceeds as follows.
 \item Find the highest remaining (\emph{i.e.} unused) data value in the profile.
 
 \item If this value is less than a specified background level (given by
-the configuration parameter {\tt Reinhold.Noise}), then there are no
+the configuration parameter \texttt{Reinhold.Noise}), then there are no
 remaining significant peaks in the profile so continue with the next
 profile.
 
@@ -903,7 +338,7 @@ to find the edges of the peak. A peak ends when it either i) meets a
 pixel which has already been included within another peak, or ii) two
 adjacent pixels are both below the background level, or iii) the average
 gradient of the profile over three adjacent pixel drops below a minimum
-value specified by the configuration parameter {\tt Reinhold.FlatSlope},
+value specified by the configuration parameter \texttt{Reinhold.FlatSlope},
 or iv) the end of the profile is reached.
 
 \item If the peak was not truncated by reaching either end of the profile,
@@ -911,11 +346,11 @@ and if the peak spans sufficient pixels, the positions of the two edges of
 the peak are marked in a mask array which is the same shape and size as the
 2D or 3D data array. The minimum number of pixels spanned by a peak in
 order for the peak to be usable is given by the configuration parameter
-{\tt Reinhold.MinPix}.
+\texttt{Reinhold.MinPix}.
 
 \item The position of the peak itself is also marked so long as its peak
 value is above a specified minimum value (given by configuration parameter
-{\tt Reinhold.Thresh}).
+\texttt{Reinhold.Thresh}).
 
 \item The pixels within the 1D profile which fall between the upper and
 lower edges of the peak are marked as ``used'', and the algorithm loops
@@ -961,12 +396,12 @@ pixel in a cube of 3$\times$3$\times$3 neighbouring pixels for 3D data.
 thinner) using another cellular automata algorithm which proceeds as follows.
 If the number of neighbouring edge pixels surrounding a central pixel is
 greater than a specified threshold value (given by the configuration
-parameter {\tt Reinhold.CAThresh}), the central pixel is marked as
+parameter \texttt{Reinhold.CAThresh}), the central pixel is marked as
 an edge pixel. If the number of neighbouring edge pixels is equal to or
 below this threshold, the central pixel is not marked as an edge pixel.
 This transformation can be applied repeatedly to increase the amount of
 erosion by setting a value greater than one for the configuration parameter
-{\tt Reinhold.CAIterations}.
+\texttt{Reinhold.CAIterations}.
 
 \end{enumerate}
 
@@ -1041,7 +476,7 @@ clump identifier within a 3$\times$3$\times$3 cube (or 3$\times$3 square
 for 2D data) of
 neighbours. This process can be repeated to increase the degree of
 cleaning, by assigning a value greater than one to the configuration
-parameter {\tt Reinhold.FixClumpsIterations}.
+parameter \texttt{Reinhold.FixClumpsIterations}.
 
 The results of this cleaning process are the final clump allocations for
 every data pixel, from which the catalogue of clump parameters is produced.
@@ -1060,7 +495,7 @@ but one which lends some verisimilitude to the present algorithm!).
 The algorithm considers every data pixel in the supplied array in turn as
 a potential start for a ``walk'' to a neighbouring peak. Pixels which are
 below a nominated background level (specified by configuration parameter
-{\tt FellWalker.Noise}) are ignored and are flagged as not belonging to any
+\texttt{FellWalker.Noise}) are ignored and are flagged as not belonging to any
 emission clump. These are skipped over, as are pixels which have already
 been assigned to a clump. Once a pixel is found that has not yet been
 assigned to a clump and is above the background level, the algorithm
@@ -1076,7 +511,7 @@ all routes go down-hill. But this may be merely a noise spike, rather
 than a significant peak, and so a check is made over a more extended
 neighbourhood to see if a pixel with a higher data value than the current
 pixel can be found (the extent of this extended neighbourhood is
-specified by the configuration parameter {\tt FellWalker.MaxJump}). If so, the
+specified by the configuration parameter \texttt{FellWalker.MaxJump}). If so, the
 algorithm ``jumps'' to the pixel with the highest value in the extended
 neighbourhood, and then proceeds as before to walk up-hill. If no pixel
 with a higher value is found within the extended neighbourhood, the pixel
@@ -1092,7 +527,7 @@ point and all the pixels so far visited are assigned to the same clump.
 In some cases, the initial part of a walk may be over very flat
 ``terrain''. The significant part of a walk is considered to start when
 the average gradient (taken over a 4 step length) first reaches the value
-of configuration parameter {\tt FlatSlope}. Any pixels visited prior to this point
+of configuration parameter \texttt{FlatSlope}. Any pixels visited prior to this point
 are deemed not to be in any clump. However, this only applies if the
 walk starts at or close to ``sea level''. For walks which start from a
 higher level (\emph{i.e.} from a pixel which has a data value greater than
@@ -1107,7 +542,7 @@ to smooth the boundaries. This replaces each clump identifier by the most
 commonly occurring value within a 3$\times$3 square (or 3$\times$3$\times$3
 cube for 3D data)
 of neighbours. The number of times which this cleaning process should be
-applied is specified by configuration parameter {\tt CleanIter}.
+applied is specified by configuration parameter \texttt{CleanIter}.
 
 If the high data values in a clump form a plateau with slight
 undulations, then the above algorithm may create a separate clump for
@@ -1115,13 +550,13 @@ each undulation. This is probably inappropriate, especially if the dips
 between the undulations are less than or are comparable to the noise
 level in the data. This situation can arise for instance if the
 pixel-to-pixel noise is correlated on a scale equal to or larger than the
-value of the {\tt MaxJump} configuration parameter. To avoid this, adjoining
+value of the \texttt{MaxJump} configuration parameter. To avoid this, adjoining
 clumps are merged together if the dip between them is less than a
 specified value. Specifically, if two clumps with peak values \emph{PEAK1}
 and  \emph{PEAK2}, where \emph{PEAK1} is less than \emph{PEAK2}, are
 adjacent to each other, and if the pixels along the interface between the
 two clumps all have data values which are larger than ``\emph{PEAK1 - MinDip}''
-(where \emph{MinDip} is the value of the {\tt MinDip} configuration
+(where \emph{MinDip} is the value of the \texttt{MinDip} configuration
 parameter), then the two clumps are merged together.
 
 The results of this merging process are the final clump allocations for
@@ -1146,9 +581,9 @@ to display the output NDF using the KAPPA \xref{DISPLAY}{sun95}{DISPLAY}
 command. For instance:
 
 \small
-\begin{verbatim}
+\begin{terminalv}
      % display clumps mode=scale badcol=red accept
-\end{verbatim}
+\end{terminalv}
 \normalsize
 
 will display the file \verb+clumps.sdf+ so that black corresponds to the
@@ -1160,10 +595,10 @@ values, then you can use KAPPA \xref{COPYBAD}{sun95}{COPYBAD} to produce a
 copy of the original data with all non-clump pixels set bad:
 
 \small
-\begin{verbatim}
+\begin{terminalv}
      % copybad data ref=clumps out=data2
      % display data2 mode=perc badcol=red accept
-\end{verbatim}
+\end{terminalv}
 \normalsize
 
 will copy the file \verb+data.sdf+ into the file \verb+data2.sdf+,
@@ -1174,10 +609,10 @@ Alternatively, you may be interested in the background (non-clump)
 pixels. To get an NDF containing just the background pixels, do:
 
 \small
-\begin{verbatim}
+\begin{terminalv}
      % copybad data ref=clumps out=data2 invert
      % display data2 mode=perc badcol=red accept
-\end{verbatim}
+\end{terminalv}
 \normalsize
 
 The output NDF contains an extension structure holding information
@@ -1189,19 +624,19 @@ within the clump are set bad.}. So to display an image of (say) clump 12,
 do:
 
 \small
-\begin{verbatim}
+\begin{terminalv}
      % display "clumps.more.cupid.clumps(12)" mode=perc badcol=red accept
-\end{verbatim}
+\end{terminalv}
 \normalsize
 
 To draw an outline of a clump on top of a previously displayed image of
 the entire data array, do:
 
 \small
-\begin{verbatim}
+\begin{terminalv}
      % display data mode=perc accept
      % outlineclump clumps 12
-\end{verbatim}
+\end{terminalv}
 \normalsize
 
 \subsection{3D Data}
@@ -1214,16 +649,16 @@ Visualising clumps in 3D is much harder. Options include the following.
 display the intersection of the tenth pixel plane with clump number 12, do:
 
 \small
-\begin{verbatim}
+\begin{terminalv}
      % display "clumps.more.cupid.clumps(12)(,,10)" mode=perc badcol=red accept
-\end{verbatim}
+\end{terminalv}
 \normalsize
 
 \item Use the 3D facilities of \xref{GAIA}{sun214}{} \latex{(SUN/214)},
 accessed through the \verb+Open cube+ entry in the \verb+File+ menu.
 
 \item Use a complete 3D visualisation such as OpenDX (see
-\htmladdnormallink{http://www.opendx.org/}{{\tt http://www.opendx.org/}}). The
+\url{http://www.opendx.org/}). The
 facilities of the Starlink DX extension package (known as ``SX''
 \xref{SX}{sun203}{} \latex{(SUN/203)}) may be useful as it provides
 a means of converting NDF data files to the DX native format, and also
@@ -1237,24 +672,24 @@ visualisations of a 3D data cube.
 By default, the output catalogue created by FINDCLUMPS and EXTRACTCLUMPS
 will be a standard FITS binary table, with the following columns:
 
-\begin{description}
-\item[Peak1]: The first co-ordinate at the centre of the pixel with the
+\begin{aligndesc}
+\item[Peak1:] The first co-ordinate at the centre of the pixel with the
 highest data value in the clump.
-\item[Peak2]: The second co-ordinate at the centre of the pixel with the
+\item[Peak2:] The second co-ordinate at the centre of the pixel with the
 highest data value in the clump.
-\item[Peak3]: The third co-ordinate at the centre of the pixel with the
+\item[Peak3:] The third co-ordinate at the centre of the pixel with the
 highest data value in the clump.
-\item[Cen1]: The first co-ordinate of the clump centroid.
-\item[Cen2]: The second co-ordinate of the clump centroid.
-\item[Cen3]: The third co-ordinate of the clump centroid.
-\item[Size1]: The size of the clump along the first axis, in pixels.
-\item[Size2]: The size of the clump along the second axis, in pixels.
-\item[Size3]: The size of the clump along the third axis, in pixels.
-\item[Sum]: The total data sum in the clump.
-\item[Peak]: The peak value in the clump.
-\item[Volume]: The total number of pixels falling within the clump (a
+\item[Cen1:] The first co-ordinate of the clump centroid.
+\item[Cen2:] The second co-ordinate of the clump centroid.
+\item[Cen3:] The third co-ordinate of the clump centroid.
+\item[Size1:] The size of the clump along the first axis, in pixels.
+\item[Size2:] The size of the clump along the second axis, in pixels.
+\item[Size3:] The size of the clump along the third axis, in pixels.
+\item[Sum:] The total data sum in the clump.
+\item[Peak:] The peak value in the clump.
+\item[Volume:] The total number of pixels falling within the clump (a
 volume for 3D data and an area for 2D data).
-\end{description}
+\end{aligndesc}
 
 The co-ordinate system used depends on the value supplied for the WCSPAR
 parameter. If WCSPAR is set to TRUE, then current WCS co-ordinate system
@@ -1277,7 +712,7 @@ The clump sizes are the standard deviation of the pixel co-ordinate
 values about the centroid position, weighted by the pixel values. For a
 Gaussian profile, this size value is equal to the standard deviation of the
 Gaussian. These sizes are then corrected to remove the effect of the
-instrumental smoothing specified by the {\tt FwhmBeam} and {\tt VeloRes}
+instrumental smoothing specified by the \texttt{FwhmBeam} and \texttt{VeloRes}
 configuration parameters (assuming the DECONV parameter is set to TRUE):
 
 \begin{myquote}
@@ -1289,7 +724,7 @@ configuration parameters (assuming the DECONV parameter is set to TRUE):
 \end{myquote}
 
 where $b_{x}$, $b_{y}$ and $b_{z}$ are the beam widths implied by
-configuration parameters {\tt FwhmBeam} and {\tt VeloRes}. Clumps are excluded
+configuration parameters \texttt{FwhmBeam} and \texttt{VeloRes}. Clumps are excluded
 from the returned list if the clump size before correction is smaller than the
 specified beam width. The final widths are converted to WCS units for
 storage in the catalogue if WCSPAR is TRUE.
@@ -1313,8 +748,7 @@ the instrumental beam width.
 
 The recommended way to explore and examine the output catalogue is to use
 the Starlink catalogue browser, TOPCAT (see
-\htmladdnormallink{http://www.starlink.ac.uk/topcat/}
-{{\tt http://www.starlink.ac.uk/topcat/}}).
+\url{http://www.starlink.ac.uk/topcat/}).
 
 \section{Taking Account of Varying Noise Levels}
 
@@ -1387,14 +821,12 @@ data array, producing the required data clump parameters.
 \newpage
 \appendix
 \section{ \label{APP:DESCRIPTION}Description of the CUPID applications}
-\begin{latexonly}
-\latexonlysubsection{Alphabetic list of CUPID routines.}
-%
-% set up a mini table of contents for this section pointing into next section.
-%
-\include{list.tex}
 
-\end{latexonly}
+\subsection{Alphabetic list of CUPID routines.}
+\begin{aligndesc}
+\include{list.tex}
+\end{aligndesc}
+
 
 \subsection{Complete routine descriptions \label{descriptions}}
 
@@ -1406,6 +838,6 @@ for NDF applications.
 \include{tasks.tex}
 
 \newpage
-\markboth{\stardocname}{\stardocname}
+
 
 \end{document}
